[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "image_processing"
version = "0.0.1"
authors = [
  { name="Boluwatife Babajide", email="babajidemichael67@gmail.com" },
]
description = "A function that preprocesses images for machine learning models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/michaelbabajide/image_preprocessing"
"Bug Tracker" = "https://github.com/michaelbabajide/image_preprocessing/issues"